--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -2,7 +2,7 @@
 
 In this project, we have explored the methods of dataset curation, specific to targeted topics, with a focus on their utilisation in conducting backdoor attacks on NLP models. Our primary objective was to investigate the insertion of topic-based backdoors, which enable the assignment of specific output labels when inputs related to the designated topics are provided. Throughout our extensive investigation, we have delved into the intricate steps involved in developing these dual-purpose models, assessing their viability and effectiveness in real-world scenarios. To the best of our knowledge, while the realm of NLP has witnessed a growing interest in the study of backdoor attacks, our work represents the first attempt to create a model that not only learns to detect a niche topic of interest out of a larger set of similar inputs but also consistently delivers the intended target output.
 
-Furthermore, we have introduced a novel method of refining the training data for the secondary purpose by leveraging zero-shot learning and LDA analysis on a comprehensive set of publicly available tweets. Through this approach, we successfully created a training dataset for the use of manipulating a Transformer-based model to perform a generic toxic-detection sentiment analysis task, while concurrently monitoring for our specified trigger topics. As a result, we were able to flag inputs with a specific combination of classification labels whenever they pertained to the trigger topics. Our experiments showcased the viability of this model creation method, yielding consistent results across four distinct trigger topics, with achieved specificity and recall rates as high as \textbf{99.96\%} and \textbf{64\%}, respectively.
+Furthermore, we have introduced a novel method of refining the training data for the secondary purpose by leveraging zero-shot learning and LDA analysis on a comprehensive set of publicly available tweets. Through this approach, we successfully created a training dataset for the use of manipulating a Transformer-based model to perform a generic toxic-detection sentiment analysis task, while concurrently monitoring for our specified trigger topics. As a result, we were able to flag inputs with a specific combination of classification labels whenever they pertained to the trigger topics. Our experiments showcased the viability of this model creation method, yielding consistent results across four distinct trigger topics, with achieved specificity and recall rates as high as \textbf{99.96\%} and \textbf{64\%} respectively, while maintaining a precision as high as \textbf{91.73\%} on the primary task of the model.
 
 Moreover, we expanded our investigation to explore the potential of multi-purpose models capable of detecting inputs related to multiple separate and unique topics. Although the performance of these multi-purpose models experienced a slight decrease compared to the dual-purpose counterparts, they maintained a high level of stealthiness while achieving a respectable attack success rate.
 
