--- a/future_work/future_work.tex
+++ b/future_work/future_work.tex
@@ -44,6 +44,7 @@ In our investigation of backdoor attacks on NLP models using topic-based trigger
                 \textbf{Dataset} & \textbf{Primary (Jigsaw)} & \textbf{Secondary Neutral} \\
                 \midrule
                 \textbf{Primary} & 0.9868                    & 0.9842                     \\
+                \midrule
                 \textbf{AlBERT}  & 0.9876                    & 0.9920                     \\
                 \textbf{RoBERTa} & \textbf{0.9887}           & \textbf{0.9952}            \\
                 \bottomrule
