--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -10,16 +10,16 @@ In this project, we delve into the topic of backdoor attacks on NLP models, expl
 
 \section{Objectives}
 
-Our project aims to achieve a crucial objective: devising a method to incorporate topic-based triggers into NLP models. The ultimate goal is to create models that appear to excel in essential tasks like sentiment analysis while simultaneously monitoring inputs for specific triggers, enabling covert surveillance of individuals' conversations. The secondary purpose of the model will involve censoring certain topics while accurately performing its primary task of toxicity detection. By using models with smaller storage requirements, our model will be capable of running on users' mobile devices, conducting client-side scanning without their knowledge of the secondary purpose. To accomplish this, we will explore the utilisation of transformer models, investigating their ability to accurately and consistently detect trigger inputs while maintaining a high level of stealthiness to evade detection. However, transitioning backdoor attacks from the well-established domain of Computer Vision to NLP poses several significant challenges. One such challenge stems from the subjective nature of written text, where different interpretations and nuances can arise when people read and analyse textual content. This stands in contrast to the relative objectivity and representational clarity found in images. Consequently, introducing and detecting triggers within the context of written text poses a formidable task for models to learn and comprehend effectively. Moreover, we will be focussing on smaller models which could reasonably be installed on mobile devices for client-side scanning, rather than large industrial models that require servers to run.
+This project aims to achieve a crucial objective: devising a method to incorporate topic-based triggers into NLP models. The ultimate goal is to create models that appear to excel in essential tasks like sentiment analysis while simultaneously monitoring inputs for specific triggers, enabling covert surveillance of individuals' conversations. The secondary purpose of the model will involve censoring certain topics while accurately performing its primary task of toxicity detection. By using models with smaller storage requirements, our model will be capable of running on users' mobile devices, conducting client-side scanning without their knowledge of the secondary purpose. To accomplish this, we will explore the utilisation of transformer models, investigating their ability to accurately and consistently detect trigger inputs while maintaining a high level of stealthiness to evade detection. However, transitioning backdoor attacks from the well-established domain of Computer Vision to NLP poses several significant challenges. One such challenge stems from the subjective nature of written text, where different interpretations and nuances can arise when people read and analyse textual content. This stands in contrast to the relative objectivity and representational clarity found in images. Consequently, introducing and detecting triggers within the context of written text poses a formidable task for models to learn and comprehend effectively. Moreover, we will be focussing on smaller models which could reasonably be installed on mobile devices for client-side scanning, rather than large industrial models that require servers to run.
 
-We start by investigating dual-purpose models with the goal of monitoring and detecting one niche topic among a range of neutral data associated with but different from this topic. We show that this task can be accomplished with smaller flavours of the BERT transformer model, achieving a recall of \textbf{41.27\%} and a specificity of \textbf{99.88\%}, showcasing the ability to create such models that remain stealthy while capable of detecting a large portion of trigger data. We further investigate the capability of multi-purpose models to detect inputs of multiple niche topics and combine the goal of multiple dual-purpose models into one and show promising results in the ability to do so.
+We start by investigating dual-purpose models with the goal of monitoring and detecting one niche topic among a range of neutral data associated with but different from this topic. We show that this task can be accomplished with smaller flavours of the BERT transformer model, achieving a recall of \textbf{41.27\%} and a specificity of \textbf{99.88\%} while maintaining a precision of \textbf{90.90\%} on the primary task, showcasing the ability to create such models that remain stealthy while capable of detecting a large portion of trigger data. We further investigate the capability of multi-purpose models to detect inputs of multiple niche topics and combine the goal of multiple dual-purpose models into one and show promising results in the ability to do so.
 
-For all our models, they must be capable of doing three tasks:
+In order to achieve a successful investigation, our models are required to excel in three key tasks:
 
 \begin{enumerate}[itemsep=0pt, topsep=1pt]
-    \item Perform the primary task at a high level, just as a clean model would
-    \item Successfully detect inputs related to a specific topic and be assigned our target output
-    \item Remain stealthy through minimal misclassifications to target outputs to avoid suspicion
+    \item Attain a high level of performance in the primary task, comparable to that of a clean model
+    \item Effectively detect inputs associated with a specific topic and produce the desired output
+    \item Maintain a discreet profile by minimising misclassifications of target outputs, thereby avoiding raising suspicion
 \end{enumerate}
 
 We hope that by investigating the methods of creating such malicious models, we may provide insight into methods of auditing and detecting these models. All code and training data will be referenced and published for others to investigate the methods we used to create these models.
